@@ -1,3 +1,9 @@
+Sun Dec  6 18:25:22 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/webrick/test_cgi.rb (TestWEBrickCGI#test_cgi): gave up the test
+	  of binary path info test on Windows because the test had passed
+	  occasionally as the comment said.
+
 Sun Dec  6 15:25:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/io/console/console.c (console_getpass): add IO#getpass
